--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,8 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "target": "es5",
+    "types": ["node"],
+    "allowJs": true,
     "typeRoots": [
       "node_modules/@types"
     ],
