--- a/package.json
+++ b/package.json
@@ -21,6 +21,9 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1",
+    "bootstrap-material-design": "^0.5.10",
     "core-js": "^2.4.1",
     "crypto": "0.0.3",
     "js-stats": "^1.0.5",
