--- a/package.json
+++ b/package.json
@@ -21,15 +21,18 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "array-occurrence": "^1.0.0",
     "bootstrap": "^3.3.7",
-    "jquery": "^3.2.1",
     "bootstrap-material-design": "^0.5.10",
     "core-js": "^2.4.1",
     "crypto": "0.0.3",
+    "jquery": "^3.2.1",
     "js-stats": "^1.0.5",
     "ng2-charts": "^1.6.0",
+    "npm-array-unique": "^1.0.3",
     "probability-distributions": "^0.9.1",
     "rxjs": "^5.1.0",
+    "sort-numbers": "^1.0.3",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
