--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "crypto": "0.0.3",
     "jquery": "^3.2.1",
     "js-stats": "^1.0.5",
+    "ng-dom-to-pdf": "^1.0.0",
     "ng2-charts": "^1.6.0",
     "npm-array-unique": "^1.0.3",
     "probability-distributions": "^0.9.1",
