--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "@types/jspdf": "^1.1.31",
     "array-occurrence": "^1.0.0",
     "bootstrap": "^3.3.7",
     "bootstrap-material-design": "^0.5.10",
@@ -28,7 +29,7 @@
     "crypto": "0.0.3",
     "jquery": "^3.2.1",
     "js-stats": "^1.0.5",
-    "ng-dom-to-pdf": "^1.0.0",
+    "jspdf": "^1.3.3",
     "ng2-charts": "^1.6.0",
     "npm-array-unique": "^1.0.3",
     "probability-distributions": "^0.9.1",
